좌표는 left, top 따로 취급하는 것이 아닌 합쳐서 취급해야 함